# simple-pick-and-place-planning

./: CMakeLists.txt  README.md  domain.pddl  package.xml  planning.l  problem.pddl  xdot.rosinstall
0-basic/: 0-basic.launch  planning.l
1-with_failure/: 1-with_failure.launch  domain.pddl  planning.l  problem_from_failure.pddl
